--- a/api_project/templates/index.html
+++ b/api_project/templates/index.html
@@ -9,13 +9,16 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- connect to static folder css file -->
 </head>
-<body>
-    <div class="container">
+<body style="font-family: Helvetica;">
+    <div class="container mt-4">
         <div class="jumbotron text-center">
             <h1>NASA Astronomy Picture of the Day</h1>
-            <h2 id="title"></h2>
             <h3>Date: <span id="date">{{ date }}</span></h3>
-            <img id="hdurl" src="{{ hdurl }}" alt="NASA Picture of the Day" class="img-fluid img-thumbnail">
+            <figure class="figure my-5">
+                <h2 id="title">"{{ title }}"</h2>
+                <img id="hdurl" src="{{ hdurl }}" alt="NASA Picture of the Day" class="img-fluid img-thumbnail">
+                <figcaption class="figure-caption">Photo Credit: {{ credit }}</figcaption>
+            </figure>
             <p id="explanation">{{ explanation }}</p>
         </div>
     </div>
