adding previous day's POD

--- a/api_project/templates/index.html
+++ b/api_project/templates/index.html
@@ -19,14 +19,18 @@
             <figure class="figure my-5">
                 <h2 id="title">"{{ title }}"</h2>
                 <img id="hdurl" src="{{ hdurl }}" alt="NASA Picture of the Day" class="img-fluid img-thumbnail">
+            {% if 'copyright' in nasa_data %}
                 <figcaption class="figure-caption">Photo Credit: {{ credit }}</figcaption>
+            {% else %}
+                <figcaption class="figure-caption">All photo copyrights belong to NASA</figcaption>
+            {% endif %}
             </figure>
             <p id="explanation" class="mb-5">{{ explanation }}</p>
 
             <div class="links">
                 <ul class="nav nav-pills d-flex justify-content-between">
                     <li class="btn btn-sm btn-outline-dark">
-                        <a href="#" class="nav-link">Previous POD</a>
+                        <a href="{% url 'previous' %}" class="nav-link">Previous POD</a>
                     </li>
                     <li class="btn btn-sm btn-outline-dark">
                         <a href="#" class="nav-link">Search for POD</a>
